feat: add Gen IV map editing